1.4.5 - Scrolling while menu on mobile open fixed

--- a/_scss/_hcd-guides-custom-styles.scss
+++ b/_scss/_hcd-guides-custom-styles.scss
@@ -564,7 +564,7 @@ button:not([disabled]):focus {
       width: 10px;
       height: 10px;
       position: absolute;
-      bottom: -6px;   
+      bottom: px-to-rem(-6px);   
     }
 
     &_header {
@@ -576,7 +576,7 @@ button:not([disabled]):focus {
       padding: units(1);
       display: inline-block;
       position: absolute;
-      top: -20px;
+      top: px-to-rem(-20px);
       background-color: color('white');
       border: 2px solid color('gold-30v');
       font-family: $theme-font-family-serif;
@@ -807,10 +807,10 @@ button:not([disabled]):focus {
       color: color('white');
     }
 
-    a:first-of-type {
+  /*   a:first-of-type {
       margin-top: 0.45rem;
-/*       margin-right: units(3);*/
-     }
+      margin-right: units(3);
+     }*/
   }
 
   .lab-hero--home {
@@ -1049,7 +1049,7 @@ button:not([disabled]):focus {
     .usa-current::after {
       width: units(1) !important;
       height: units(1);
-      margin-top: -0.25rem;
+      margin-top: px-to-rem(-4px);
       background-color: color('gold-20v') !important;
       border-radius: 0.5rem !important;
       content: '';
@@ -1195,7 +1195,7 @@ button:not([disabled]):focus {
   }
 
   .usa-layout-docs__background {
-    left: -0.5rem;
+    left: px-to-rem(-8px);
   }
   
   .usa-prose__hcd-guide { 
@@ -1322,6 +1322,11 @@ button:not([disabled]):focus {
     top: 0;
   }
 
+  .gray_banner_mobile_visible_scroll_up {
+    position: relative;
+    top: 0;
+  }
+
   .header_scroll_down {
     position: relative;
     top: 0;
@@ -1330,6 +1335,11 @@ button:not([disabled]):focus {
   .header_scroll_up {
     position: fixed;
     top: px-to-rem(48px);
+  }
+
+  .header_mobile_visible_scroll_up {
+    position: relative;
+    top: 0;
   }
 
   .hero_scroll_down {
@@ -1341,6 +1351,11 @@ button:not([disabled]):focus {
     height: 0;
     position: fixed;
     top: px-to-rem(84px);
+  }
+
+  .hero_mobile_visible_scroll_up {
+    position: relative;
+    top: px-to-rem(-11px);
   }
 
   .hero_bar_scroll_up {
@@ -1394,7 +1409,7 @@ button:not([disabled]):focus {
   }
 
   .guide_menu_link_title_visible {
-    display: block !important;
+    display: inline-block !important;
   }
   
   .search_mobile_link_not_visible {
@@ -1478,15 +1493,23 @@ button:not([disabled]):focus {
     &__guide_menu_link_title,
     &__guide_menu_title {
       width: 6.5rem;
-      margin-top: units(1);
+      margin-top: px-to-rem(7px);
       display: inline-block;
       color: color('white');
       text-transform: uppercase;
       vertical-align: top;
     }
 
+    &__guide_menu_link_title {
+      font-size: font-size('body', 'sm') !important;
+    }
+
+    &__guide_menu_title {
+      margin-top: px-to-rem(6px);
+    }
+
     &__guide_menu_link {
-      margin-top: 0.45rem;
+      margin-top: px-to-rem(7px);
       width: 30px;
       display: inline-block;
       vertical-align: top;
