--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -29294,7 +29294,7 @@ button:not([disabled]):focus {
   width: 10px;
   height: 10px;
   position: absolute;
-  bottom: -6px; }
+  bottom: -0.375rem; }
 
 .usa-prose__hcd-guide .lab__case_in_point_header {
   width: 100%; }
@@ -29304,7 +29304,7 @@ button:not([disabled]):focus {
   padding: 0.5rem;
   display: inline-block;
   position: absolute;
-  top: -20px;
+  top: -1.25rem;
   background-color: white;
   border: 2px solid #e5a000;
   font-family: "merriweather", serif;
@@ -29458,15 +29458,16 @@ button:not([disabled]):focus {
   .lab-hero--hcd-guide__sub-title {
     height: 2rem;
     display: inline-block;
-    color: white; }
+    color: white;
+    /*   a:first-of-type {
+      margin-top: 0.45rem;
+      margin-right: units(3);
+     }*/ }
     .lab-hero--hcd-guide__sub-title a {
       margin-top: 0.4rem;
       display: inline-block;
       font-size: 0.9375rem;
       color: white; }
-    .lab-hero--hcd-guide__sub-title a:first-of-type {
-      margin-top: 0.45rem;
-      /*       margin-right: units(3);*/ }
   .lab-hero--hcd-guide .lab-hero--home__body {
     margin-left: auto ;
     margin-right: auto ;
@@ -29830,12 +29831,18 @@ button:not([disabled]):focus {
   .gray_banner_scroll_up {
     position: fixed;
     top: 0; }
+  .gray_banner_mobile_visible_scroll_up {
+    position: relative;
+    top: 0; }
   .header_scroll_down {
     position: relative;
     top: 0; }
   .header_scroll_up {
     position: fixed;
     top: 3rem; }
+  .header_mobile_visible_scroll_up {
+    position: relative;
+    top: 0; }
   .hero_scroll_down {
     position: fixed !important;
     top: 0; }
@@ -29843,6 +29850,9 @@ button:not([disabled]):focus {
     height: 0;
     position: fixed;
     top: 5.25rem; }
+  .hero_mobile_visible_scroll_up {
+    position: relative;
+    top: -0.6875rem; }
   .hero_bar_scroll_up {
     width: 100%;
     display: block;
@@ -29872,7 +29882,7 @@ button:not([disabled]):focus {
   .guide_menu_link_title_not_visible {
     display: none !important; }
   .guide_menu_link_title_visible {
-    display: block !important; }
+    display: inline-block !important; }
   .search_mobile_link_not_visible {
     display: none !important; }
   .search_mobile_link_hide {
@@ -29916,13 +29926,17 @@ button:not([disabled]):focus {
         display: inline-block; }
     .lab-hero--hcd-guide__guide_menu_link_title, .lab-hero--hcd-guide__guide_menu_title {
       width: 6.5rem;
-      margin-top: 0.5rem;
+      margin-top: 0.4375rem;
       display: inline-block;
       color: white;
       text-transform: uppercase;
       vertical-align: top; }
+    .lab-hero--hcd-guide__guide_menu_link_title {
+      font-size: 1rem !important; }
+    .lab-hero--hcd-guide__guide_menu_title {
+      margin-top: 0.375rem; }
     .lab-hero--hcd-guide__guide_menu_link {
-      margin-top: 0.45rem;
+      margin-top: 0.4375rem;
       width: 30px;
       display: inline-block;
       vertical-align: top; }
